Fix: Dont display name when on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -216,6 +216,9 @@ footer{
     i.fas{
       display: inline;
     }
+    .logo.logo-name{
+      display: none;
+    }
     .mobile-nav{
       // display: none;
       position: absolute;
